[QuangHV]: Create Sample Data for Quiz
